<resources>

    <!--
        Main name of the app.
    -->
    <string name="app_name">GoCart</string>

    <!--
        Labels for each of the botmain_navigationtion icons.
    -->
    <string name="menu_shopping_list">List</string>
    <string name="menu_grocery_search">Search</string>
    <string name="menu_stores">Stores</string>

    <!--
        Headings for checked and unchecked items in the shopping list.
    -->
    <string name="list_heading_unchecked_items">Shopping List:</string>
    <string name="list_heading_checked_items">Checked Items:</string>
    <string name="list_heading_checked_items_hidden">(Hidden)</string>

    <string name="product_item_shopping_amount">&#215; {amount}</string>
    <string name="product_item_shopping_cost">£{cost}</string>

    <!--
        Labels displaying the number of checked or unchecked items.
    -->
    <string name="checked_items_counter">({count})</string>
    <string name="unchecked_items_counter">£{total_cost} ({count})</string>

    <!--
        Label for the EditText in the search activity.
    -->
    <string name="search_input_heading">Search:</string>

    <!--
        Labels for the information to be displayed in the product info dialog.
    -->
    <string name="product_info_dialog_heading">{product_name}</string>
    <string name="product_info_dialog_cost">£{cost}</string>
    <string name="product_info_amount_label">Amount:</string>
    <string name="product_info_amount_count">{amount}</string>
    <string name="product_info_amount_edit">Edit</string>
    <string name="product_info_added_label">Add to Shopping List</string>

    <string name="store_select_dialog_heading">{store_name}</string>
    <string name="store_select_dialog_message">Would you like to select this as your main Tesco Store?</string>

    <string name="store_firsttime_select_heading">View opening times of your local store.</string>
    <string name="button_add_store_text">Add a Store</string>

    <!--
        Labels for the Store Search Actvity.
    -->
    <string name="store_search_dialog_location">View on Map</string>

    <!--
        Labels for the Credentials Activity.
    -->
    <string name="login_confirm">Login</string>
    <string name="signup_confirm">Create User</string>
    <string name="title_activity_credentials">Login or Create a New User</string>
    <string name="title_activity_shopping">GoCart</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- Product Search Fragment -->

    <string name="product_search_title">Search</string>
    <string name="product_search_text_box_hint">Product Name</string>

    <!-- Product Information Dialog -->

    <string name="product_item_info_title">{title}</string>
    <string name="product_item_info_cost">£{cost}</string>
    <string name="product_item_info_added">Add to shopping list</string>
    <string name="product_item_info_amount">Amount:</string>
    <string name="product_item_info_amount_value">{amount}</string>
    <string name="product_item_info_edit_amount">Edit</string>

</resources>
